# autodiff_rs

./: .gitignore  Cargo.toml
autodiff_derive/: Cargo.toml  LICENSE
autodiff_derive/src/: lib.rs
forwarddiffable_derive/: Cargo.toml
forwarddiffable_derive/src/: lib.rs
src/: ad_ndarray.rs  adops.rs  arithmetic.rs  autodiff.rs  autodiffable.rs  autotuple.rs  complex.rs  compose.rs  diff.rs  diffable.rs  forward.rs  func_traits.rs  funcs.rs  gradienttype.rs  impls.rs  lib.rs  main.rs  test_autodiff.rs  test_manualdiff.rs  traits.rs
src/ad_ndarray/: adops.rs  autodiff.rs  dimabssub.rs  dimsub.rs  func_traits.rs  funcs.rs  impls.rs  ndarray_adops.rs  scalar.rs  test_ad_ndarray.rs  traits.rs
src/complex/: adops.rs  arithmetic.rs  autodiff.rs  func_traits.rs  funcs.rs
