[package]
name = "autodiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
name = "autodiff"

[dependencies]
ndarray = { version = "0.15.6", optional = true }
ndarray_einsum_beta = { version = "0.7.0", optional = true }
num = "0.4.1"
paste = "1.0.14"
autodiff_derive = { version = "0.1.0", path = "./autodiff_derive" }

[features]
ndarray = ["dep:ndarray", "dep:ndarray_einsum_beta"]
