[package]
name = "autodiff"
version = "0.1.0"
edition = "2021"
description = "Automatic differentiation for Rust, with ndarray support"
license-file = "LICENSE"
keywords = ["autodiff", "automatic differentiation", "ndarray", "gradient"]
repository = "https://github.com/pdcook/autodiff_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
name = "autodiff"

[dependencies]
ndarray = { version = "0.15.6", optional = true }
ndarray_einsum_beta = { version = "0.7.0", optional = true }
num = "0.4.1"
paste = "1.0.14"
autodiff_derive = { version = "0.1.0", path = "./autodiff_derive" }
tikv-jemallocator = { version = "0.5.4" }

[features]
ndarray = ["dep:ndarray", "dep:ndarray_einsum_beta"]

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"
