[package]
name = "autodiff_rs"
version = "0.1.1"
edition = "2021"
description = "Automatic differentiation for Rust, with ndarray support"
#license-file = "LICENSE"
license = "GPL-3.0"
keywords = ["autodiff", "derivatives", "ndarray", "gradient"]
repository = "https://github.com/pdcook/autodiff_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
name = "autodiff"

[dependencies]
ndarray = { version = "0.15.6", optional = true }
ndarray_einsum_beta = { version = "0.7.0", optional = true }
ndarray-linalg = {version = "0.16.0", optional = true, features = ["openblas-static"]}
num = "0.4.1"
paste = "1.0.14"
autodiff_derive = { version = "0.1.0", path = "./autodiff_derive" }
tikv-jemallocator = { version = "0.5.4" }

[features]
ndarray = ["dep:ndarray", "dep:ndarray_einsum_beta", "dep:ndarray-linalg"]

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"
