[package]
name = "autodiff_derive"
version = "0.1.0"
edition = "2021"
description = "Derive macros for autodiff"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "0.15.18"
quote = "0.6"

[lib]
proc-macro = true
