[package]
name = "autodiff_derive"
version = "0.1.1"
edition = "2021"
description = "Derive macros for autodiff"
#license-file = "LICENSE"
license = "GPL-3.0"
repository = "https://github.com/pdcook/autodiff_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "0.15.18"
quote = "0.6"

[lib]
proc-macro = true
